--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <RelativeLayout
         android:id="@+id/rellay1"
         android:layout_width="match_parent"
@@ -31,7 +30,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_name_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imgUser"
@@ -75,79 +74,79 @@
         android:layout_below="@id/rellay1"
         android:orientation="horizontal">
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_weight="1"-->
-<!--            android:background="@color/followersBg"-->
-<!--            android:gravity="center"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:paddingTop="5dp">-->
+        <!--        <RelativeLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:background="@color/followersBg"-->
+        <!--            android:gravity="center"-->
+        <!--            android:paddingBottom="5dp"-->
+        <!--            android:paddingTop="5dp">-->
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:gravity="center_horizontal"-->
-<!--                android:orientation="vertical">-->
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:gravity="center_horizontal"-->
+        <!--                android:orientation="vertical">-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="453K"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="25sp" />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="wrap_content"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:fontFamily="sans-serif-light"-->
+        <!--                    android:text="453K"-->
+        <!--                    android:textColor="@color/white"-->
+        <!--                    android:textSize="25sp" />-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="followers"-->
-<!--                    android:textAllCaps="true"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="13sp" />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="wrap_content"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:fontFamily="sans-serif-light"-->
+        <!--                    android:text="followers"-->
+        <!--                    android:textAllCaps="true"-->
+        <!--                    android:textColor="@color/white"-->
+        <!--                    android:textSize="13sp" />-->
 
-<!--            </LinearLayout>-->
+        <!--            </LinearLayout>-->
 
-<!--        </RelativeLayout>-->
+        <!--        </RelativeLayout>-->
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_weight="1"-->
-<!--            android:background="@color/followingBg"-->
-<!--            android:gravity="center"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:paddingTop="5dp">-->
+        <!--        <RelativeLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:background="@color/followingBg"-->
+        <!--            android:gravity="center"-->
+        <!--            android:paddingBottom="5dp"-->
+        <!--            android:paddingTop="5dp">-->
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:gravity="center_horizontal"-->
-<!--                android:orientation="vertical">-->
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:gravity="center_horizontal"-->
+        <!--                android:orientation="vertical">-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="873"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="25sp" />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="wrap_content"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:fontFamily="sans-serif-light"-->
+        <!--                    android:text="873"-->
+        <!--                    android:textColor="@color/white"-->
+        <!--                    android:textSize="25sp" />-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="following"-->
-<!--                    android:textAllCaps="true"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="13sp" />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="wrap_content"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:fontFamily="sans-serif-light"-->
+        <!--                    android:text="following"-->
+        <!--                    android:textAllCaps="true"-->
+        <!--                    android:textColor="@color/white"-->
+        <!--                    android:textSize="13sp" />-->
 
-<!--            </LinearLayout>-->
+        <!--            </LinearLayout>-->
 
-<!--        </RelativeLayout>-->
+        <!--        </RelativeLayout>-->
 
     </LinearLayout>
 
@@ -177,14 +176,27 @@
                     android:text="Email"
                     android:textColor="@color/headings"
                     android:textSize="13sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:text="vuvanminh102@gmail.com"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    >
+                    <TextView
+                        android:id="@+id/tv_email_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="vuvanminh102@gmail.com"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <Button
+                        android:id="@+id/btn_updateEmail"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_settings_backup_restore_black_24dp"
+                        android:backgroundTint="#2196F3"/>
+                </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -206,14 +218,27 @@
                     android:text="Phone"
                     android:textColor="@color/headings"
                     android:textSize="13sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:text="01234566789"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    >
+                    <TextView
+                        android:id="@+id/tv_phone_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="01234566789"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                    <Button
+                        android:id="@+id/btn_updatePhone"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_settings_backup_restore_black_24dp"
+                        android:backgroundTint="#2196F3"/>
+                </RelativeLayout>
+
 
                 <View
                     android:layout_width="match_parent"
@@ -235,14 +260,27 @@
                     android:text="Birth date"
                     android:textColor="@color/headings"
                     android:textSize="13sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:text="30-02-1999"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    >
+                    <TextView
+                        android:id="@+id/tv_birth_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="30-02-1999"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                    <Button
+                        android:id="@+id/btn_updateBirth"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_settings_backup_restore_black_24dp"
+                        android:backgroundTint="#2196F3"/>
+                </RelativeLayout>
+
 
                 <View
                     android:layout_width="match_parent"
@@ -264,14 +302,27 @@
                     android:text="Facebook"
                     android:textColor="@color/headings"
                     android:textSize="13sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:text="facebook.com"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    >
+                    <TextView
+                        android:id="@+id/tv_facebook_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="facebook.com"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                    <Button
+                        android:id="@+id/btn_updateFace"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_settings_backup_restore_black_24dp"
+                        android:backgroundTint="#2196F3"/>
+                </RelativeLayout>
+
 
                 <View
                     android:layout_width="match_parent"
