--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/ic_slide4"/>
+            android:src="@drawable/ic_test"/>
 
         <TextView
             android:layout_width="wrap_content"
