--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,13 +36,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Tên tài khoản"
-                android:textColorHint="#fff"
+                android:textColorHint="#353535"
                 android:textSize="18sp"
-                android:backgroundTint="#D203A9F4"
-                android:textColor="#fff"
+                android:backgroundTint="#79A8A8A8"
+                android:textColor="#353535"
                 android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_account"
-                android:drawableTint="#fff"
+                android:drawableTint="#353535"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="12dp"
                 />
@@ -60,11 +60,11 @@
                 android:layout_height="wrap_content"
                 android:hint="Mật khẩu"
                 android:textSize="18sp"
-                android:backgroundTint="#D203A9F4"
-                android:textColor="#fff"
+                android:backgroundTint="#79A8A8A8"
+                android:textColor="#353535"
                 android:drawableLeft="@drawable/ic_lock"
-                android:drawableTint="#fff"
-                android:textColorHint="#fff"
+                android:drawableTint="#353535"
+                android:textColorHint="#353535"
                 android:drawablePadding="5dp"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="12dp"
@@ -82,37 +82,47 @@
 
                 android:layout_marginTop="7dp"
                 android:id="@+id/btn_dangnhap"
-                android:backgroundTint="#E6FC3D04"
+                android:backgroundTint="#F5F1F1F1"
                 android:background="@drawable/shape_boder"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
-                android:textColor="#fff"
+                android:textColor="#4D4C4C"
                 android:textStyle="bold"
-                android:paddingHorizontal="20sp"
+                android:paddingHorizontal="30sp"
                 android:paddingVertical="12dp"
                 />
-            <TextView
-                android:layout_marginTop="7dp"
+            <LinearLayout
+                android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hoặc"
-                android:textColor="#fff"
-                />
-            <Button
-                android:layout_marginTop="7dp"
-                android:id="@+id/btn_dangky"
-                android:backgroundTint="#EE2240EC"
+                android:orientation="horizontal"
                 android:background="@drawable/shape_boder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" Đăng ký "
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="12dp"
-                />
+                android:backgroundTint="#79A8A8A8"
+                android:paddingLeft="15dp"
+                >
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bạn không có tài khoản? "
+                    android:textColor="#353535"
+                    android:layout_marginRight="10dp"
+                    />
+                <Button
+                    android:id="@+id/btn_dangky"
+                    android:backgroundTint="#EE2240EC"
+                    android:background="@drawable/shape_boder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" Đăng ký "
+                    android:textColor="#fff"
+                    android:textSize="12sp"
+                    android:paddingHorizontal="10dp"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
